--- a/fitlifepro/src/app/component/workout/blogs/blogs.component.html
+++ b/fitlifepro/src/app/component/workout/blogs/blogs.component.html
@@ -1,1 +1,168 @@
-<p>blogs works!</p>
+<header class="main-header">
+  <nav class="main-nav">
+    <ul class="nav-list">
+      <li><a href="#" class="nav-link">Home</a></li>
+      <li><a href="#" class="nav-link">About Us</a></li>
+      <li><a href="#" class="nav-link">Contact Us</a></li>
+      <li><a href="#" class="nav-link">Category</a></li>
+      <li><a href="#" class="nav-link active">Blogs</a></li>
+      <li><a href="#" class="nav-link">Recipes</a></li>
+      <li><a href="#" class="nav-link">Gift A Plan</a></li>
+    </ul>
+  </nav>
+  <img src="https://cdn.builder.io/api/v1/image/assets/TEMP/d198183264bc3d4a8ff7b5b66ca6ce18c58710cbb3146f5a4b20f88c2c9a2ee8?placeholderIfAbsent=true&apiKey=fcaa7293172548b6a2e1a132d616c7c2" alt="" class="header-logo">
+</header>
+
+<main class="main-content">
+  <h1 class="page-title">Blogs <span class="highlight">&</span> Articles</h1>
+  <p class="page-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quam</p>
+
+  <form class="search-form">
+    <label for="searchInput" class="visually-hidden">Search here...</label>
+    <input type="search" id="searchInput" placeholder="Search here..." class="search-input">
+    <button type="submit" class="search-button" aria-label="Search"></button>
+  </form>
+
+  <section class="categories-section">
+    <h2 class="section-title">Categories</h2>
+    <div class="categories-grid">
+      <article class="category-item">
+        <img src="https://cdn.builder.io/api/v1/image/assets/TEMP/93033dbf1996e11b0f3458158171b47482d45abf54ae64ad5ea2898a38e788fa?placeholderIfAbsent=true&apiKey=fcaa7293172548b6a2e1a132d616c7c2" alt="" class="category-image">
+        <h3 class="category-title">Category 1</h3>
+      </article>
+      <article class="category-item">
+        <img src="https://cdn.builder.io/api/v1/image/assets/TEMP/32ff38433e4e329b9f7949e15896a9649ac70d06d4bb78088dcf9d7b8a95b9de?placeholderIfAbsent=true&apiKey=fcaa7293172548b6a2e1a132d616c7c2" alt="" class="category-image">
+        <h3 class="category-title">Category 2</h3>
+      </article>
+      <article class="category-item">
+        <img src="https://cdn.builder.io/api/v1/image/assets/TEMP/e20ff142a4aa569e0bba575b0a4d535b8a66bdbf2a0b5016cf1ab00901b1479b?placeholderIfAbsent=true&apiKey=fcaa7293172548b6a2e1a132d616c7c2" alt="" class="category-image">
+        <h3 class="category-title">Category 3</h3>
+      </article>
+      <article class="category-item">
+        <img src="https://cdn.builder.io/api/v1/image/assets/TEMP/119c7f4f6a050700970298382ba057a2cbb204490d7bb415df8a881130cc1879?placeholderIfAbsent=true&apiKey=fcaa7293172548b6a2e1a132d616c7c2" alt="" class="category-image">
+        <h3 class="category-title">Category 4</h3>
+      </article>
+      <article class="category-item">
+        <img src="https://cdn.builder.io/api/v1/image/assets/TEMP/0a01b7f75ab2e594050995e67a55bf6450dae4170b612747d33675f6da7dffee?placeholderIfAbsent=true&apiKey=fcaa7293172548b6a2e1a132d616c7c2" alt="" class="category-image">
+        <h3 class="category-title">Category 5</h3>
+      </article>
+      <article class="category-item">
+        <img src="https://cdn.builder.io/api/v1/image/assets/TEMP/7048a70acb50f895fa841e4ebfad2bb7b8227e5edf18394759460303f47f4139?placeholderIfAbsent=true&apiKey=fcaa7293172548b6a2e1a132d616c7c2" alt="" class="category-image">
+        <h3 class="category-title">Category 6</h3>
+      </article>
+    </div>
+  </section>
+
+  <section class="popular-articles">
+    <h2 class="section-title">Popular Articles</h2>
+    <div class="articles-grid">
+      <article class="article-card featured">
+        <img src="https://cdn.builder.io/api/v1/image/assets/TEMP/9ec80ed4e27d57f20b25deadbebf82ec1bb25d952408920c96bdb59341ed2749?placeholderIfAbsent=true&apiKey=fcaa7293172548b6a2e1a132d616c7c2" alt="" class="article-image">
+        <div class="article-content">
+          <h3 class="article-title">Name of the article will be here Name of the article will be here</h3>
+          <p class="article-excerpt">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quam sagittis aliquam Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quam sagittis aliquam Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quam sagittis aliquam Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quam sagittis aliquam Lorem ipsum dolor...</p>
+          <div class="article-meta">
+            <time datetime="2022-01-24">24 January 2022</time>
+            <span class="article-author">-Name here</span>
+          </div>
+          <a href="#" class="read-more">Read Article</a>
+        </div>
+      </article>
+      <article class="article-card">
+        <div class="article-content">
+          <h3 class="article-title">Name of the article will be here Name of the article will be here</h3>
+          <p class="article-excerpt">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quam sagittis aliquam Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quam sagittis aliquam Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quam sagittis aliquam Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quam sagittis aliquam Lorem ipsum dolor...</p>
+          <div class="article-meta">
+            <time datetime="2022-01-24">24 January 2022</time>
+            <span class="article-author">-Name here</span>
+          </div>
+          <a href="#" class="read-more">Read Article</a>
+        </div>
+      </article>
+    </div>
+  </section>
+
+  <section class="recent-articles">
+    <h2 class="section-title">Recent Articles</h2>
+    <div class="articles-grid">
+      <article class="article-card">
+        <img src="https://cdn.builder.io/api/v1/image/assets/TEMP/ccfa0a4f9e88f93024031dbe951281a20d4470f83e621a44d8a1df265d73d8b7?placeholderIfAbsent=true&apiKey=fcaa7293172548b6a2e1a132d616c7c2" alt="" class="article-image">
+        <div class="article-content">
+          <h3 class="article-title">Name of the article will be here Name of the article will be here</h3>
+          <p class="article-excerpt">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quam sagittis aliquam Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
+          <div class="article-meta">
+            <time datetime="2022-01-24">24 January 2022</time>
+            <span class="article-author">-Name here</span>
+          </div>
+          <a href="#" class="read-more">Read Article</a>
+        </div>
+      </article>
+      <article class="article-card">
+        <img src="https://cdn.builder.io/api/v1/image/assets/TEMP/ccfa0a4f9e88f93024031dbe951281a20d4470f83e621a44d8a1df265d73d8b7?placeholderIfAbsent=true&apiKey=fcaa7293172548b6a2e1a132d616c7c2" alt="" class="article-image">
+        <div class="article-content">
+          <h3 class="article-title">Name of the article will be here Name of the article will be here</h3>
+          <p class="article-excerpt">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quam sagittis aliquam Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
+          <div class="article-meta">
+            <time datetime="2022-01-24">24 January 2022</time>
+            <span class="article-author">-Name here</span>
+          </div>
+          <a href="#" class="read-more">Read Article</a>
+        </div>
+      </article>
+      <article class="article-card">
+        <img src="https://cdn.builder.io/api/v1/image/assets/TEMP/ccfa0a4f9e88f93024031dbe951281a20d4470f83e621a44d8a1df265d73d8b7?placeholderIfAbsent=true&apiKey=fcaa7293172548b6a2e1a132d616c7c2" alt="" class="article-image">
+        <div class="article-content">
+          <h3 class="article-title">Name of the article will be here Name of the article will be here</h3>
+          <p class="article-excerpt">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quam sagittis aliquam Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
+          <div class="article-meta">
+            <time datetime="2022-01-24">24 January 2022</time>
+            <span class="article-author">-Name here</span>
+          </div>
+          <a href="#" class="read-more">Read Article</a>
+        </div>
+      </article>
+    </div>
+  </section>
+
+  <section class="all-articles">
+    <h2 class="section-title">All Articles</h2>
+    <div class="articles-grid">
+      <article class="article-card">
+        <img src="https://cdn.builder.io/api/v1/image/assets/TEMP/dfb97ac8128f1df1ab8af7d1eb1102147b53954d8c45134d783613fbb5943f45?placeholderIfAbsent=true&apiKey=fcaa7293172548b6a2e1a132d616c7c2" alt="" class="article-image">
+        <div class="article-content">
+          <h3 class="article-title">Name of the article will be here Name of the article will be here</h3>
+          <p class="article-excerpt">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quam sagittis aliquam Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
+          <div class="article-meta">
+            <time datetime="2022-01-24">24 January 2022</time>
+            <span class="article-author">-Name here</span>
+          </div>
+          <a href="#" class="read-more">Read Article</a>
+        </div>
+      </article>
+      <article class="article-card">
+        <img src="https://cdn.builder.io/api/v1/image/assets/TEMP/dfb97ac8128f1df1ab8af7d1eb1102147b53954d8c45134d783613fbb5943f45?placeholderIfAbsent=true&apiKey=fcaa7293172548b6a2e1a132d616c7c2" alt="" class="article-image">
+        <div class="article-content">
+          <h3 class="article-title">Name of the article will be here Name of the article will be here</h3>
+          <p class="article-excerpt">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quam sagittis aliquam Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
+          <div class="article-meta">
+            <time datetime="2022-01-24">24 January 2022</time>
+            <span class="article-author">-Name here</span>
+          </div>
+          <a href="#" class="read-more">Read Article</a>
+        </div>
+      </article>
+      <article class="article-card">
+        <img src="https://cdn.builder.io/api/v1/image/assets/TEMP/dfb97ac8128f1df1ab8af7d1eb1102147b53954d8c45134d783613fbb5943f45?placeholderIfAbsent=true&apiKey=fcaa7293172548b6a2e1a132d616c7c2" alt="" class="article-image">
+        <div class="article-content">
+          <h3 class="article-title">Name of the article will be here Name of the article will be here</h3>
+          <p class="article-excerpt">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quam sagittis aliquam Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
+          <div class="article-meta">
+            <time datetime="2022-01-24">24 January 2022</time>
+            <span class="article-author">-Name here</span>
+          </div>
+          <a href="#" class="read-more">Read Article</a>
+        </div>
+      </article>
+    </div>
+  </section>
+</main>
