--- a/fitlifepro/src/app/component/workout/blogs1/blogs1.component.html
+++ b/fitlifepro/src/app/component/workout/blogs1/blogs1.component.html
@@ -1,1 +1,118 @@
-<p>blogs1 works!</p>
+<header class="header">
+  <nav class="navigation">
+    <ul class="nav-list">
+      <li><a href="#" class="nav-link">Home</a></li>
+      <li><a href="#" class="nav-link">About Us</a></li>
+      <li><a href="#" class="nav-link">Contact Us</a></li>
+      <li><a href="#" class="nav-link">Category</a></li>
+      <li><a href="#" class="nav-link active">Blogs</a></li>
+      <li><a href="#" class="nav-link">Recipes</a></li>
+      <li><a href="#" class="nav-link">Gift A Plan</a></li>
+    </ul>
+  </nav>
+  <img src="https://cdn.builder.io/api/v1/image/assets/TEMP/10088fb1f2084186be10669b07783b3119f2205db98b47fd6e0abd306dabbcc0?placeholderIfAbsent=true&apiKey=fcaa7293172548b6a2e1a132d616c7c2" alt="Company Logo" class="logo" />
+</header>
+
+<main class="main-content">
+  <h1 class="main-title">Blogs <span class="highlight">&</span> Articles</h1>
+  <p class="subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quam</p>
+
+  <form class="search-form">
+    <label for="search-input" class="visually-hidden">Search here...</label>
+    <input type="search" id="search-input" class="search-input" placeholder="Search here..." />
+    <button type="submit" class="search-button" aria-label="Search"></button>
+  </form>
+
+  <section class="category-section">
+    <h2 class="category-title">Category 1</h2>
+    <div class="article-grid">
+      <article class="article-card">
+        <img src="https://cdn.builder.io/api/v1/image/assets/TEMP/dfb97ac8128f1df1ab8af7d1eb1102147b53954d8c45134d783613fbb5943f45?placeholderIfAbsent=true&apiKey=fcaa7293172548b6a2e1a132d616c7c2" alt="" class="article-image" />
+        <h3 class="article-title">Name of the article will be here Name of the article will be here</h3>
+        <p class="article-excerpt">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quam sagittis aliquam Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
+        <div class="article-footer">
+          <a href="#" class="read-more">Read Article</a>
+          <div class="article-meta">
+            <time datetime="2022-01-24">24 January 2022</time>
+            <span class="author">-Name here</span>
+          </div>
+        </div>
+      </article>
+      <article class="article-card">
+        <img src="https://cdn.builder.io/api/v1/image/assets/TEMP/dfb97ac8128f1df1ab8af7d1eb1102147b53954d8c45134d783613fbb5943f45?placeholderIfAbsent=true&apiKey=fcaa7293172548b6a2e1a132d616c7c2" alt="" class="article-image" />
+        <h3 class="article-title">Name of the article will be here Name of the article will be here</h3>
+        <p class="article-excerpt">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quam sagittis aliquam Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
+        <div class="article-footer">
+          <a href="#" class="read-more">Read Article</a>
+          <div class="article-meta">
+            <time datetime="2022-01-24">24 January 2022</time>
+            <span class="author">-Name here</span>
+          </div>
+        </div>
+      </article>
+      <article class="article-card">
+        <img src="https://cdn.builder.io/api/v1/image/assets/TEMP/dfb97ac8128f1df1ab8af7d1eb1102147b53954d8c45134d783613fbb5943f45?placeholderIfAbsent=true&apiKey=fcaa7293172548b6a2e1a132d616c7c2" alt="" class="article-image" />
+        <h3 class="article-title">Name of the article will be here Name of the article will be here</h3>
+        <p class="article-excerpt">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quam sagittis aliquam Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
+        <div class="article-footer">
+          <a href="#" class="read-more">Read Article</a>
+          <div class="article-meta">
+            <time datetime="2022-01-24">24 January 2022</time>
+            <span class="author">-Name here</span>
+          </div>
+        </div>
+      </article>
+      <article class="article-card">
+        <img src="https://cdn.builder.io/api/v1/image/assets/TEMP/dfb97ac8128f1df1ab8af7d1eb1102147b53954d8c45134d783613fbb5943f45?placeholderIfAbsent=true&apiKey=fcaa7293172548b6a2e1a132d616c7c2" alt="" class="article-image" />
+        <h3 class="article-title">Name of the article will be here Name of the article will be here</h3>
+        <p class="article-excerpt">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quam sagittis aliquam Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
+        <div class="article-footer">
+          <a href="#" class="read-more">Read Article</a>
+          <div class="article-meta">
+            <time datetime="2022-01-24">24 January 2022</time>
+            <span class="author">-Name here</span>
+          </div>
+        </div>
+      </article>
+      <article class="article-card">
+        <img src="https://cdn.builder.io/api/v1/image/assets/TEMP/dfb97ac8128f1df1ab8af7d1eb1102147b53954d8c45134d783613fbb5943f45?placeholderIfAbsent=true&apiKey=fcaa7293172548b6a2e1a132d616c7c2" alt="" class="article-image" />
+        <h3 class="article-title">Name of the article will be here Name of the article will be here</h3>
+        <p class="article-excerpt">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quam sagittis aliquam Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
+        <div class="article-footer">
+          <a href="#" class="read-more">Read Article</a>
+          <div class="article-meta">
+            <time datetime="2022-01-24">24 January 2022</time>
+            <span class="author">-Name here</span>
+          </div>
+        </div>
+      </article>
+      <article class="article-card">
+        <img src="https://cdn.builder.io/api/v1/image/assets/TEMP/dfb97ac8128f1df1ab8af7d1eb1102147b53954d8c45134d783613fbb5943f45?placeholderIfAbsent=true&apiKey=fcaa7293172548b6a2e1a132d616c7c2" alt="" class="article-image" />
+        <h3 class="article-title">Name of the article will be here Name of the article will be here</h3>
+        <p class="article-excerpt">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quam sagittis aliquam Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
+        <div class="article-footer">
+          <a href="#" class="read-more">Read Article</a>
+          <div class="article-meta">
+            <time datetime="2022-01-24">24 January 2022</time>
+            <span class="author">-Name here</span>
+          </div>
+        </div>
+      </article>
+      <article class="article-card">
+        <img src="https://cdn.builder.io/api/v1/image/assets/TEMP/dfb97ac8128f1df1ab8af7d1eb1102147b53954d8c45134d783613fbb5943f45?placeholderIfAbsent=true&apiKey=fcaa7293172548b6a2e1a132d616c7c2" alt="" class="article-image" />
+        <h3 class="article-title">Name of the article will be here Name of the article will be here</h3>
+        <p class="article-excerpt">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quam sagittis aliquam Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
+        <div class="article-footer">
+          <a href="#" class="read-more">Read Article</a>
+          <div class="article-meta">
+            <time datetime="2022-01-24">24 January 2022</time>
+            <span class="author">-Name here</span>
+          </div>
+        </div>
+      </article>
+      <!-- Repeat the article-card structure for the other articles -->
+    </div>
+  </section>
+
+  <!-- Repeat the category-section structure for other categories -->
+</main>
