--- a/fitlifepro/src/app/component/workout/blogs2/blogs2.component.html
+++ b/fitlifepro/src/app/component/workout/blogs2/blogs2.component.html
@@ -1,1 +1,122 @@
-<p>blogs2 works!</p>
+<header class="header">
+  <nav class="navigation">
+    <a href="#" class="nav-link nav-link-active">Home</a>
+    <a href="#" class="nav-link">About Us</a>
+    <a href="#" class="nav-link">Contact Us</a>
+    <a href="#" class="nav-link">Category</a>
+    <a href="#" class="nav-link">Blogs</a>
+    <a href="#" class="nav-link">Recipes</a>
+    <a href="#" class="nav-link">Gift A Plan</a>
+  </nav>
+  <img src="https://cdn.builder.io/api/v1/image/assets/TEMP/0dbe7b21803d02325050a411149b7495f11bd0b175953fae8c4f590dd3d45259?placeholderIfAbsent=true&apiKey=fcaa7293172548b6a2e1a132d616c7c2" alt="Header logo" class="header-logo" />
+</header>
+
+<main class="main-content">
+  <article class="article">
+    <h1 class="article-title">Name of the article will be here</h1>
+    <div class="article-meta">
+      <time datetime="2022-01-24" class="article-date">24 January 2022</time>
+      <span class="article-author">-Name here</span>
+    </div>
+    <img src="https://cdn.builder.io/api/v1/image/assets/TEMP/5b4869c032246485c3185bd06eb7f7470fdc97a82be29f041522fc383a2ac0c6?placeholderIfAbsent=true&apiKey=fcaa7293172548b6a2e1a132d616c7c2" alt="Article main image" class="article-image" />
+    <p class="article-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Venenatis dictum quisque at amet pellentesque. Augue porttitor volutpat fringilla nulla pretium rhoncus. Faucibus id faucibus sit venenatis sit eros, vulputate tempus aliquam. Adipiscing natoque congue in volutpat at pharetra sit viverra. Metus et tempus bibendum egestas pellentesque. Amet, sem sed sed leo egestas. Quis in ullamcorper massa malesuada egestas vitae. Lobortis at vitae eget nibh ornare gravida. Purus ultrices pulvinar sit mi. Faucibus mauris sit felis massa malesuada enim felis viverra viverra. Fermentum enim nunc, in lorem eu. A risus tristique senectus quam. Ultrices enim in amet tempus gravida lectus sed consequat. Et fringilla est malesuada amet integer ac, posuere ac nec. Sit arcu blandit magnis id etiam. Cursus nisl enim mauris, pharetra risus adipiscing pretium. Velit nibh pretium tincidunt adipiscing lectus massa. Dolor viverra id aliquet purus quis vestibulum. Laoreet gravida elementum sed varius metus lobortis ornare cras. pharetra sit viverra. Metus et tempus bibendum egestas pellentesque. Amet, sem sed sed leo egestas.</p>
+
+    <section class="article-section">
+      <div class="article-image-wrapper">
+        <img src="https://cdn.builder.io/api/v1/image/assets/TEMP/3961d517093aa6cb5623d436653db4676f62695427cbd60f87de6bca5075550f?placeholderIfAbsent=true&apiKey=fcaa7293172548b6a2e1a132d616c7c2" alt="Article section image" class="article-section-image" />
+      </div>
+      <p class="article-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Venenatis dictum quisque at amet pellentesque. Augue porttitor volutpat fringilla nulla pretium rhoncus. Faucibus id faucibus sit venenatis sit eros, vulputate tempus aliquam. Adipiscing natoque congue in volutpat at pharetra sit viverra. Metus et tempus bibendum egestas pellentesque. Amet, sem sed sed leo egestas. Quis in ullamcorper massa malesuada egestas vitae. Lobortis at vitae eget nibh ornare gravida. Purus ultrices pulvinar sit mi. Faucibus mauris sit felis massa malesuada enim felis viverra viverra. Fermentum enim nunc, in lorem eu. A risus tristique senectus quam. Ultrices enim in amet tempus gravida lectus sed consequat.</p>
+    </section>
+
+    <p class="article-text">Et fringilla est malesuada amet integer ac, posuere ac nec. Sit arcu blandit magnis id etiam. Cursus nisl enim mauris, pharetra risus adipiscing pretium. Velit nibh pretium tincidunt adipiscing lectus massa. Dolor viverra id aliquet purus quis vestibulum. Laoreet gravida elementum sed varius metus lobortis ornare cras. pharetra sit viverra. Metus et tempus bibendum egestas pellentesque. Amet, sem sed sed leo egestas. Quis in ullamcorper massa malesuada egestas vitae. Lobortis at vitae eget nibh ornare gravida. Purus ultrices pulvinar sit mi. Faucibus mauris sit felis massa malesuada enim felis viverra viverra. Fermentum enim nunc, in lorem eu. A risus tristique senectus quam. Ultrices enim in amet tempus gravida lectus sed consequat. Et fringilla est malesuada amet integer ac, posuere ac nec. Sit arcu blandit magnis id etiam. Cursus nisl enim mauris, pharetra risus adipiscing pretium. Velit nibh pretium tincidunt adipiscing lectus massa.</p>
+
+    <img src="https://cdn.builder.io/api/v1/image/assets/TEMP/5b4869c032246485c3185bd06eb7f7470fdc97a82be29f041522fc383a2ac0c6?placeholderIfAbsent=true&apiKey=fcaa7293172548b6a2e1a132d616c7c2" alt="Additional article image" class="article-image" />
+
+    <p class="article-text">Et fringilla est malesuada amet integer ac, posuere ac nec. Sit arcu blandit magnis id etiam. Cursus nisl enim mauris, pharetra risus adipiscing pretium. Velit nibh pretium tincidunt adipiscing lectus massa. Dolor viverra id aliquet purus quis vestibulum. Laoreet gravida elementum sed varius metus lobortis ornare cras. pharetra sit viverra. Metus et tempus bibendum egestas pellentesque. Amet, sem sed sed leo egestas. Quis in ullamcorper massa malesuada egestas vitae. Lobortis at vitae eget nibh ornare gravida. Purus ultrices pulvinar sit mi. Faucibus mauris sit felis massa malesuada enim felis viverra viverra. Fermentum enim nunc, in lorem eu. A risus tristique senectus quam. Ultrices enim in amet tempus gravida lectus sed consequat. Et fringilla est malesuada amet integer ac, posuere ac nec. Sit arcu blandit magnis id etiam. Cursus nisl enim mauris, pharetra risus adipiscing pretium. Velit nibh pretium tincidunt adipiscing lectus massa.</p>
+  </article>
+
+  <section class="comments-section">
+    <h2 class="comments-title">Comments</h2>
+    <div class="comment">
+      <h3 class="comment-author">Name will be here</h3>
+      <p class="comment-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pharetra laoreet orci blandit sagittis, purus. Proin rhoncus enim enim cras aliquam, vel at consectetur. Felis suspendisse sollicitudin mattis interdum eget ornare. Cursus a parturient facilisis in aliquam sed a habitant. Mi donec ullamcorper ut fusce dolor, mauris tincidunt. Ut bibendum adipiscing tincidunt faucibus lobortis convallis est malesuada duis. Pellentesque at sed purus, eget ac parturient quis.</p>
+      <div class="comment-actions">
+        <button class="action-button" aria-label="Like">
+          <img src="https://cdn.builder.io/api/v1/image/assets/TEMP/de088b949196a1a0640c4895cba68f9670329c1167f2045536d4512858b30217?placeholderIfAbsent=true&apiKey=fcaa7293172548b6a2e1a132d616c7c2" alt="" class="action-icon" />
+        </button>
+        <button class="action-button" aria-label="Dislike">
+          <img src="https://cdn.builder.io/api/v1/image/assets/TEMP/c7e1d3e48e251dfa5ccbed005ac53da903cd89280d4aef59425b8209dd8ea5db?placeholderIfAbsent=true&apiKey=fcaa7293172548b6a2e1a132d616c7c2" alt="" class="action-icon" />
+        </button>
+        <button class="reply-button">Reply</button>
+      </div>
+    </div>
+    <div class="comment comment-reply">
+      <h3 class="comment-author">Name will be here</h3>
+      <p class="comment-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pharetra laoreet orci blandit sagittis, purus. Proin rhoncus enim enim cras aliquam, vel at consectetur. Felis suspendisse sollicitudin mattis interdum eget ornare. Cursus a parturient facilisis in aliquam sed a habitant. Mi donec ullamcorper ut fusce dolor, mauris tincidunt. Ut bibendum adipiscing tincidunt</p>
+      <div class="comment-actions">
+        <button class="action-button" aria-label="Like">
+          <img src="https://cdn.builder.io/api/v1/image/assets/TEMP/de088b949196a1a0640c4895cba68f9670329c1167f2045536d4512858b30217?placeholderIfAbsent=true&apiKey=fcaa7293172548b6a2e1a132d616c7c2" alt="" class="action-icon" />
+        </button>
+        <button class="action-button" aria-label="Dislike">
+          <img src="https://cdn.builder.io/api/v1/image/assets/TEMP/c7e1d3e48e251dfa5ccbed005ac53da903cd89280d4aef59425b8209dd8ea5db?placeholderIfAbsent=true&apiKey=fcaa7293172548b6a2e1a132d616c7c2" alt="" class="action-icon" />
+        </button>
+        <button class="reply-button">Reply</button>
+      </div>
+    </div>
+    <div class="comment">
+      <h3 class="comment-author">Name will be here</h3>
+      <p class="comment-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pharetra laoreet orci blandit sagittis, purus. Proin rhoncus enim enim cras aliquam, vel at consectetur. Felis suspendisse sollicitudin mattis interdum eget ornare. Cursus a parturient facilisis in aliquam sed a habitant. Mi donec ullamcorper ut fusce dolor, mauris tincidunt. Ut bibendum adipiscing tincidunt faucibus lobortis convallis est malesuada duis. Pellentesque at sed purus, eget ac parturient quis.</p>
+      <div class="comment-actions">
+        <button class="action-button" aria-label="Like">
+          <img src="https://cdn.builder.io/api/v1/image/assets/TEMP/de088b949196a1a0640c4895cba68f9670329c1167f2045536d4512858b30217?placeholderIfAbsent=true&apiKey=fcaa7293172548b6a2e1a132d616c7c2" alt="" class="action-icon" />
+        </button>
+        <button class="action-button" aria-label="Dislike">
+          <img src="https://cdn.builder.io/api/v1/image/assets/TEMP/c7e1d3e48e251dfa5ccbed005ac53da903cd89280d4aef59425b8209dd8ea5db?placeholderIfAbsent=true&apiKey=fcaa7293172548b6a2e1a132d616c7c2" alt="" class="action-icon" />
+        </button>
+        <button class="reply-button">Reply</button>
+      </div>
+    </div>
+  </section>
+
+  <section class="similar-articles">
+    <h2 class="similar-articles-title">Similar Articles</h2>
+    <div class="article-grid">
+      <article class="article-card">
+        <img src="https://cdn.builder.io/api/v1/image/assets/TEMP/dfb97ac8128f1df1ab8af7d1eb1102147b53954d8c45134d783613fbb5943f45?placeholderIfAbsent=true&apiKey=fcaa7293172548b6a2e1a132d616c7c2" alt="Article thumbnail" class="article-card-image" />
+        <h3 class="article-card-title">Name of the article will be here Name of the article will be here</h3>
+        <p class="article-card-excerpt">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quam sagittis aliquam Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
+        <div class="article-card-footer">
+          <button class="read-article-button">Read Article</button>
+          <div class="article-card-meta">
+            <time datetime="2022-01-24" class="article-card-date">24 January 2022</time>
+            <span class="article-card-author">-Name here</span>
+          </div>
+        </div>
+      </article>
+      <article class="article-card">
+        <img src="https://cdn.builder.io/api/v1/image/assets/TEMP/dfb97ac8128f1df1ab8af7d1eb1102147b53954d8c45134d783613fbb5943f45?placeholderIfAbsent=true&apiKey=fcaa7293172548b6a2e1a132d616c7c2" alt="Article thumbnail" class="article-card-image" />
+        <h3 class="article-card-title">Name of the article will be here Name of the article will be here</h3>
+        <p class="article-card-excerpt">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quam sagittis aliquam Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
+        <div class="article-card-footer">
+          <button class="read-article-button">Read Article</button>
+          <div class="article-card-meta">
+            <time datetime="2022-01-24" class="article-card-date">24 January 2022</time>
+            <span class="article-card-author">-Name here</span>
+          </div>
+        </div>
+      </article>
+      <article class="article-card">
+        <img src="https://cdn.builder.io/api/v1/image/assets/TEMP/dfb97ac8128f1df1ab8af7d1eb1102147b53954d8c45134d783613fbb5943f45?placeholderIfAbsent=true&apiKey=fcaa7293172548b6a2e1a132d616c7c2" alt="Article thumbnail" class="article-card-image" />
+        <h3 class="article-card-title">Name of the article will be here Name of the article will be here</h3>
+        <p class="article-card-excerpt">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quam sagittis aliquam Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
+        <div class="article-card-footer">
+          <button class="read-article-button">Read Article</button>
+          <div class="article-card-meta">
+            <time datetime="2022-01-24" class="article-card-date">24 January 2022</time>
+            <span class="article-card-author">-Name here</span>
+          </div>
+        </div>
+      </article>
+    </div>
+  </section>
+</main>
